--- a/mini_memo/cred.json.tmpl
+++ b/mini_memo/cred.json.tmpl
@@ -2,6 +2,7 @@
 	"evernote": {
 		"enable": false,
 		"developer_token": "-- write your evernote developer token --",
-		"notebook_name": "-- your evernote notebook name --"
+		"notebook_name": "-- your evernote notebook name --",
+                "sandbox": false
 	}
 }
